--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -9,14 +9,14 @@ jobs:
     timeout-minutes: 60
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
-    - uses: actions/setup-node@v3
+    - uses: actions/checkout@v4
+    - uses: actions/setup-node@v4
       with:
         node-version: 18
     - name: Install dependencies
-      run: npm ci
+      run: npm ci --force
     - name: Install Playwright Browsers
-      run: npx playwright install --with-deps
+      run: npx playwright install --with-deps --force
     - name: Run Playwright tests
       run: npx playwright test
     - uses: actions/upload-artifact@v3
